--- a/core/views/custom-type/user/index.ejs
+++ b/core/views/custom-type/user/index.ejs
@@ -127,14 +127,13 @@ const modifyDate = (publishTime) => {
                         </select>
                     </div>
 
-                </div>
-
-                <div class="fl-center-v mt-auto" style="gap:.4rem; padding-top:2rem">
-                    <button class="btn_primary" type="button" data-user-save-btn>Save</button>
-                    <button class="btn_primary error" type="button" data-user-delete-btn>Delete</button>
-                    <button class="btn_transparent" type="button" data-user-close-btn
-                            data-toggle="user-popup">Cancel
-                    </button>
+                    <div class="footer">
+                        <button class="btn_primary" type="button" data-user-save-btn>Save</button>
+                        <button class="btn_primary error" type="button" data-user-delete-btn>Delete</button>
+                        <button class="btn_transparent" type="button" data-user-close-btn
+                                data-toggle="user-popup">Cancel
+                        </button>
+                    </div>
                 </div>
             </form>
         </div>
@@ -197,12 +196,12 @@ const modifyDate = (publishTime) => {
                             </option>
                         </select>
                     </div>
-                </div>
 
-                <!-- Submit -->
-                <div class="fl-center-v mt-auto" style="gap:.4rem; padding-top:2rem;">
-                    <button class="btn_primary" type="submit" data-add-new-user-btn>Add</button>
-                    <button class="btn_transparent" type="submit" data-toggle="user-register-popup">Cancel</button>
+                    <!-- Submit -->
+                    <div class="footer">
+                        <button class="btn_primary" type="submit" data-add-new-user-btn>Add</button>
+                        <button class="btn_transparent" type="submit" data-toggle="user-register-popup">Cancel</button>
+                    </div>
                 </div>
 
             </form>
