--- a/core/assets/styles/base/base.scss
+++ b/core/assets/styles/base/base.scss
@@ -65,6 +65,7 @@ body {
   padding: .5rem .8rem;
   min-height: 3rem;
   min-width: 6rem;
+  cursor: pointer;
 
   display: flex;
   align-items: center;
@@ -78,6 +79,8 @@ body {
   font-weight: 600;
   color: var(--btn-color);
   line-height: 1.2;
+
+  transition: all .3s ease;
 
   // hover
   &:hover,
