--- a/core/views/custom-type/media/index.ejs
+++ b/core/views/custom-type/media/index.ejs
@@ -8,22 +8,25 @@
             <span>Upload Media</span>
         </div>
 
-        <div data-form-group>
-            <div data-form-input>
+        <div class="form-fields">
+
+            <div class="field vertical-layout">
                 <label for="name">Name:</label>
                 <input id="name" type="text" name="name" placeholder="Name">
             </div>
-            <div data-form-description>Optional, we can get the name of the media.</div>
-        </div>
 
-        <div data-form-group>
-            <div data-form-input>
+            <div class="field vertical-layout">
                 <label for="image">Upload Image:</label>
                 <input type="file" name="image" accept="image/*" id="image" required>
+                <div class="description">Optional, we can get the name of the media.</div>
             </div>
+
+            <div class="footer">
+                <button class="btn_transparent" type="submit">Add New</button>
+            </div>
+
         </div>
 
-        <button class="btn_transparent" type="submit">Add New</button>
     </form>
 
     <!-- Media list -->
@@ -64,31 +67,28 @@
 
                         <div class="media-popup__col media-popup__col--right d-flex fd-column">
 
-                            <div data-form-group>
-                                <div data-form-input>
+                            <div class="form-fields">
+
+                                <div class="field vertical-layout">
                                     <label for="replace-name">Name</label>
                                     <input id="replace-name" data-media-name data-text placeholder="Name">
                                 </div>
-                            </div>
 
-                            <div data-form-group>
-                                <div data-form-input>
+                                <div class="field vertical-layout">
                                     <span data-label>URL:</span>
                                     <a data-text="" target="_blank" data-media-url
-                                       class="d-inline-block ws-nowrap overflow-hidden"
+                                       class="d-inline-block ws-nowrap overflow-hidden w100"
                                        style="text-overflow:ellipsis;"></a>
                                 </div>
-                            </div>
 
-                            <div data-form-group>
-                                <div data-form-input>
+                                <div class="field vertical-layout">
                                     <label for="replace-media">Replace Media</label>
                                     <input type="file" id="replace-media" accept="image/*" data-media-replace>
+                                    <div class="description">This action will replace all selected images with the new
+                                        one.
+                                    </div>
                                 </div>
 
-                                <div data-form-description>This action will replace all selected images with the new
-                                    one.
-                                </div>
                             </div>
 
                             <div class="fl-center-v mt-auto" style="gap:5px;">
