style(media): change form style of media popup in component

--- a/core/views/core-component-type/image.ejs
+++ b/core/views/core-component-type/image.ejs
@@ -46,23 +46,24 @@ const validatedOptions = options || '';
                                 <span>Upload Media</span>
                             </div>
 
-                            <div data-form-group>
-                                <div data-form-input>
+                            <div class="form-fields">
+                                <div class="field vertical-layout">
                                     <label for="name">Name:</label>
                                     <input id="name" type="text" name="name" placeholder="Name" data-media-name>
+                                    <div class="description">Optional, we can get the name of the media.</div>
                                 </div>
-                                <div data-form-description>Optional, we can get the name of the media.</div>
-                            </div>
 
-                            <div data-form-group>
-                                <div data-form-input>
+                                <div class="field vertical-layout">
                                     <label for="image">Upload Image:</label>
-                                    <input type="file" name="image" accept="image/*" id="image" required data-add-media
-                                           required>
+                                    <input type="file" name="image" accept="image/*" id="image" required data-add-media>
+                                </div>
+
+                                <div class="footer">
+                                    <button class="btn_transparent" type="submit" data-add-media-button>Add New</button>
                                 </div>
                             </div>
 
-                            <button class="btn_transparent" type="submit" data-add-media-button>Add New</button>
+
                         </form>
                     </div>
                 </div>
