style(media): change form style of media popup

--- a/core/views/custom-type/media/index.ejs
+++ b/core/views/custom-type/media/index.ejs
@@ -75,7 +75,7 @@
                                 </div>
 
                                 <div class="field vertical-layout">
-                                    <span data-label>URL:</span>
+                                    <span style="font-weight: 600;" class="txt_14px" data-label>URL:</span>
                                     <a data-text="" target="_blank" data-media-url
                                        class="d-inline-block ws-nowrap overflow-hidden w100"
                                        style="text-overflow:ellipsis;"></a>
