feat(account): update password

--- a/core/views/custom-type/account/index.ejs
+++ b/core/views/custom-type/account/index.ejs
@@ -82,6 +82,8 @@ const modifyDate = (publishTime) => {
                                required placeholder="Confirm Password">
                     </div>
 
+                    <div data-error-message></div>
+
                     <div class="footer">
                         <button class="btn_primary" type="button" data-account-password-update-btn>Save</button>
                         <button class="btn_transparent" type="button" data-account-close-btn
