chore(header): add permalink

--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -6,7 +6,7 @@
             <span class="admin-panel__menu-bar"></span>
         </button>
         <div class="admin-panel__logo">
-            <p>Logo</p>
+            <a href="/">Logo</a>
         </div>
     </div>
     <div class="admin__panel--right">
