--- a/core/assets/styles/index.scss
+++ b/core/assets/styles/index.scss
@@ -1,11 +1,11 @@
 // global
 @import '@global/style/reset.scss';
 @import '@global/style/atomic.scss';
+@import '@global/style/responsive.scss';
+@import '@global/style/mixins.scss';
 
 // utils
 @import "./utils/variables";
-@import "./utils/responsive";
-@import "./utils/mixins";
 @import "./utils/grid";
 
 // base
