--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -1,4 +1,4 @@
-@import "@global/style/reset.scss";
-@import "@global/style/atomic.scss";
+// global
+@import '@global/style/index.scss';
 
 // base
