refactor(style): base

--- a/assets/style/index.scss
+++ b/assets/style/index.scss
@@ -1,8 +1,9 @@
-// reset
-@import "./base/reset";
-@import "./base/atomic";
-
 // utils
 @import "./utils/responsive";
 @import "./utils/mixins";
 @import "./utils/variables";
+
+// reset
+@import "./base/reset";
+@import "./base/atomic";
+@import "./base/base";
