--- a/assets/style/base/typo.scss
+++ b/assets/style/base/typo.scss
@@ -32,7 +32,7 @@ button:focus-visible {
 h1, h2, h3, h4, h5, h6 {
   color: var(--color-heading);
   display: block;
-  font-family: var(--font-secondary);
+  font-family: var(--primary-font);
   line-height: 1.3;
   font-weight: 500;
   letter-spacing: -0.02em;
