--- a/app/styles/utils/variables.scss
+++ b/app/styles/utils/variables.scss
@@ -2,6 +2,9 @@
 * Variables
 ****************************/
 :root {
+  //// font
+  --primary-font: "Montserrat", sans-serif;
+
   //// color vars
   //--color-primary: #1d2327;
   //--color-secondary: #2271b1;
@@ -19,8 +22,6 @@
   //--permalink-color: var(--color-secondary);
   //--permalink-color-hover: var(--color-primary);
   //
-  //// font
-  //--primary-font: "Be Vietnam Pro", sans-serif;
   //
   //// vertical spacing
   //--spacing-40: 4rem;
