feat(notification): introduce new format of notification

--- a/views/register/index.ejs
+++ b/views/register/index.ejs
@@ -29,8 +29,8 @@
         </div>
 
         <!-- render message-->
-        <% if(message) { %>
-            <div class="txt_14px txt_color_error" style="margin-top:1.5rem"><%= message; %></div>
+        <% if(notification) { %>
+            <div class="txt_14px txt_color_error" style="margin-top:1.5rem"><%= notification.message; %></div>
         <% } %>
     </div>
 </div>
