--- a/core/assets/styles/pages/register.scss
+++ b/core/assets/styles/pages/register.scss
@@ -1,5 +1,6 @@
 body.register {
-  padding-top: 0;
+  // vars
+  --header-height: 0px;
 
   // background
   background: var(--color-primary);
@@ -9,26 +10,52 @@ body.register {
     min-height: 4rem;
     font-size: 1.6rem;
   }
-}
 
-.register-form {
-  padding: 2rem;
+  // popup
+  [data-popup] {
+    // inner
+    [data-popup-inner] {
+      padding: 3rem;
+      max-width: 80rem;
 
-  // inner
-  &__inner {
-    max-width: 35rem;
+      @include responsive('tablet-h') {
+        padding: 2rem;
+      }
+    }
   }
 
-  // heading
-  &__heading {
-    margin-bottom: var(--spacing-24)
+  // form
+  .register-form {
+    padding: 2rem;
+
+    // inner
+    &__inner {
+      max-width: 35rem;
+    }
+
+    // heading
+    &__heading {
+      margin-bottom: var(--spacing-24)
+    }
+
+    // content
+    &__content {
+
+      label {
+        display: none
+      }
+    }
   }
 
-  // content
-  &__content {
+  // notification
+  .notification {
+    // icon
+    &__icon {
+      margin-bottom: 1rem;
 
-    label {
-      display: none
+      svg {
+        width: 7.5rem;
+      }
     }
   }
 }
