--- a/views/register/index.ejs
+++ b/views/register/index.ejs
@@ -1,3 +1,12 @@
+<%
+// flag
+const hasNotification = !!notification;
+
+// has message
+const notificationMessage = hasNotification && notification.message;
+const notificationType = hasNotification && notification.type;
+%>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -27,14 +36,52 @@
         <div class="register-form__content">
             <%- content; %>
         </div>
-
-        <!-- render message-->
-        <% if(notification) { %>
-            <div class="txt_14px txt_color_error" style="margin-top:1.5rem"><%= notification.message; %></div>
-        <% } %>
     </div>
 </div>
 
+<!-- popup -->
+<% if(hasNotification) { %>
+    <div data-popup>
+        <div data-popup-overflow>
+            <div data-popup-overlay data-toggle="notification"></div>
 
+            <!-- pop up content-->
+            <div data-popup-inner class="notification ta-center">
+
+                <%
+                    const colorText = notificationType === 'error' ? 'txt_color_error' : 'txt_color_success';
+                %>
+
+                <div class="notification__icon <%= colorText %>">
+                    <% if (notificationType === 'error') { %>
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                             stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                        </svg>
+
+                    <% } else { %>
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                             stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                        </svg>
+                    <% } %>
+                </div>
+
+                <div class="notification__content <%= colorText %>"><%= notificationMessage; %></div>
+            </div>
+        </div>
+    </div>
+<% } %>
+
+<% if (hasNotification) { %>
+    <script>
+        setTimeout(() => {
+            document.querySelector('[data-toggle="notification"]').click();
+            console.log('click');
+        }, 50);
+    </script>
+<% } %>
 </body>
 </html>
