--- a/views/register/type/sign-in.ejs
+++ b/views/register/type/sign-in.ejs
@@ -5,13 +5,13 @@
         <!-- email -->
         <div class="field">
             <label for="email">Email:</label>
-            <input id="email" type="email" name="email" placeholder="Email">
+            <input id="email" type="email" name="email" placeholder="Email" required>
         </div>
 
         <!-- password -->
         <div class="field">
             <label for="password">Password:</label>
-            <input id="password" type="password" name="password" placeholder="Password">
+            <input id="password" type="password" name="password" placeholder="Password" required>
         </div>
 
         <!-- Forgot password -->
