--- a/views/default/index.ejs
+++ b/views/default/index.ejs
@@ -16,11 +16,9 @@
 </head>
 <body>
 
-<h1>Front End page</h1>
-<% if (data) { %>
-    <p><%= data.title; %></p>
-<% } %>
-<%- content; %>
+<div class="container">
+    <%- content; %>
+</div>
 
 </body>
 </html>
