style: introduce footer

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -6,5 +6,9 @@
 
 // base
 @import "./base/base";
+@import "./base/typo";
 @import "./base/fonts";
 @import "./base/form";
+
+// components
+@import "./components/footer";
