--- a/assets/style/index.scss
+++ b/assets/style/index.scss
@@ -2,6 +2,7 @@
 @import "./utils/responsive";
 @import "./utils/mixins";
 @import "./utils/variables";
+@import "./utils/grid";
 
 // reset
 @import "./base/reset";
