--- a/assets/style/utils/variables.scss
+++ b/assets/style/utils/variables.scss
@@ -36,6 +36,7 @@
   --fz-40: 4rem;
   --fz-32: 3.2rem;
   --fz-20: 2rem;
+  --fz-18: 1.8rem;
   --fz-16: 1.6rem;
   --fz-14: 1.4rem;
   --fz-12: 1.2rem;
