--- a/app/styles/utils/variables.scss
+++ b/app/styles/utils/variables.scss
@@ -2,7 +2,10 @@
 * Variables
 ****************************/
 :root {
-  //// font
+  // vars
+  --bg-color: #fff;
+
+  // font
   --primary-font: "Montserrat", sans-serif;
 
   // container
@@ -22,7 +25,6 @@
   //
   //// text and bg
   //--text-color: #212529;
-  //--bg-color: #f8f9fa;
   //
   //// permalink
   //--permalink-color: var(--color-secondary);
@@ -47,11 +49,22 @@
   //--fz-14: 1.4rem;
   //--fz-12: 1.2rem;
   //
-  //// heading size
-  //--size-h1: var(--fz-40);
-  //--size-h2: var(--fz-32);
-  //--size-h3: var(--fz-20);
-  //--size-h4: var(--fz-16);
-  //--size-h5: var(--fz-16);
-  //--size-h6: var(--fz-16);
+
+  // heading size
+  --size-h1: var(--fz-40);
+  --size-h2: var(--fz-32);
+  --size-h3: var(--fz-20);
+  --size-h4: var(--fz-18);
+  --size-h5: var(--fz-16);
+  --size-h6: var(--fz-16);
+}
+
+/****************************
+* Responsive
+****************************/
+@include responsive('tablet-h') {
+  :root {
+    // container
+    --gap-container: 20px;
+  }
 }
