style: introduce header

--- a/app/styles/utils/variables.scss
+++ b/app/styles/utils/variables.scss
@@ -2,6 +2,10 @@
 * Variables
 ****************************/
 :root {
+  // header
+  --header-height: 80px;
+  --header-logo: 60px;
+
   // vars
   --bg-color: #fff;
 
