style: introduce header

--- a/views/default/partials/header.ejs
+++ b/views/default/partials/header.ejs
@@ -3,12 +3,12 @@
     <div class="fl-center-v jc-space-between">
 
         <div class="header__col left fl-center-v">
-            <div class="header__logo img-wrapper-contain">
+            <a class="d-block header__logo img-wrapper-contain" href="/">
                 <img src="/themes/default.png" alt="logo image">
-            </div>
+            </a>
             <div class="header__pages">
                 <ul class="menu">
-                    <li class="menu-item"><a href="#">Home</a></li>
+                    <li class="menu-item"><a href="/">Home</a></li>
                     <li class="menu-item"><a href="#">About Us</a></li>
                     <li class="menu-item"><a href="#">Products</a></li>
                     <li class="menu-item"><a href="#">Contact</a></li>
