--- a/views/default/partials/header.ejs
+++ b/views/default/partials/header.ejs
@@ -9,9 +9,9 @@
             <div class="header__pages">
                 <ul class="menu">
                     <li class="menu-item"><a href="/">Home</a></li>
-                    <li class="menu-item"><a href="#">About Us</a></li>
-                    <li class="menu-item"><a href="#">Products</a></li>
-                    <li class="menu-item"><a href="#">Contact</a></li>
+                    <li class="menu-item"><a href="/about-us">About Us</a></li>
+                    <li class="menu-item"><a href="/products">Products</a></li>
+                    <li class="menu-item"><a href="/contact">Contact</a></li>
                 </ul>
             </div>
         </div>
