style(popup): change minheight

--- a/core/assets/styles/components/popup.scss
+++ b/core/assets/styles/components/popup.scss
@@ -54,6 +54,7 @@
   overflow: auto;
   width: 100%;
   max-width: 100rem;
+  min-height: 30rem;
   position: relative;
   z-index: 999;
   background-color: #fff;
