chore: change typo

--- a/core/views/custom-type/posts/index.ejs
+++ b/core/views/custom-type/posts/index.ejs
@@ -22,7 +22,7 @@ const modifyDate = (publishTime) => {
             <div class="posts-list__heading" data-column-wrapper="heading">
                 <div class="posts__list--title" data-column="Title">Title</div>
                 <div class="posts__list--author" data-column="Author">Author</div>
-                <div class="posts__list--state" data-column="State">State</div>
+                <div class="posts__list--state" data-column="State">Visibility</div>
                 <div class="posts__list--categories" data-column="Categories">Categories</div>
                 <div class="posts__list--date" data-column="Date">Last Update</div>
             </div>
