--- a/core/views/custom-type/account/index.ejs
+++ b/core/views/custom-type/account/index.ejs
@@ -1,15 +1,3 @@
-<%
-// modify date publish
-const modifyDate = (publishTime) => {
-    const year = publishTime.getFullYear();
-    const month = (publishTime.getMonth() + 1).toString().padStart(2, '0');
-    const date = publishTime.getDate().toString().padStart(2, '0');
-    const hour = publishTime.getHours().toString().padStart(2, '0');
-    const minute = publishTime.getMinutes().toString().padStart(2, '0');
-    return `${date}/${month}/${year} at ${hour}:${minute}`;
-};
-%>
-
 <div data-account-wrapper>
     <div data-custom-title>
         <span>Account</span>
@@ -33,7 +21,7 @@ const modifyDate = (publishTime) => {
             <div class="field half vertical-layout">
                 <!-- register at-->
                 <label>Register</label>
-                <time class="txt_14px"><%= modifyDate(data.registerAt) %></time>
+                <time class="txt_14px"><%= data.registerAtFormatted %></time>
             </div>
 
             <div class="field half vertical-layout">
