--- a/core/views/custom-type/posts/index.ejs
+++ b/core/views/custom-type/posts/index.ejs
@@ -1,15 +1,3 @@
-<%
-// modify date publish
-const modifyDate = (publishTime) => {
-    const year = publishTime.getFullYear();
-    const month = (publishTime.getMonth() + 1).toString().padStart(2, '0');
-    const date = publishTime.getDate().toString().padStart(2, '0');
-    const hour = publishTime.getHours().toString().padStart(2, '0');
-    const minute = publishTime.getMinutes().toString().padStart(2, '0');
-    return `${date}/${month}/${year} at ${hour}:${minute}`;
-};
-%>
-
 <div data-custom-title>
     <span><%= title; %></span>
 </div>
@@ -52,7 +40,7 @@ const modifyDate = (publishTime) => {
                          data-column="State"><%= post.visibility === 'private' ? 'Private' : 'Published'; %></div>
                     <div class="posts__item--categories" data-column="Categories">Categories</div>
                     <div class="posts__item--date not-show-title" data-column="Date">
-                        <time data-title="Date"><%= modifyDate(post.publish) %></time>
+                        <time data-title="Date"><%= post.publishFormatted %></time>
                     </div>
                     <div class="posts__item--utils">
                         <a href="?post_type=<%= contentType; %>&action=edit&id=<%= post._id; %>"
